Final Equip is done

--- a/index.html
+++ b/index.html
@@ -626,6 +626,277 @@
                         </a>
                     </li>
                 </ul>
+                <div class="equip__separator">
+                    <h3>Прогрессия №1</h3>
+                </div>
+                <ul class="equip__list">
+                    <li class="equip__item">
+                        <p class="equip__title">Эгида Авроры</p>
+                        <img src="./images/equip/ShieldStrIntUnique7unique.png" height="141" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Даст очень много выживаемости
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Раскатистый удар</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Губительное прикосновение</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Град ударов</span>
+                                </span>
+                            </span>
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/QLZBK2MSw">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Взгляд Аманамну</p>
+                        <img src="./images/equip/GhastlyEyeUnique.png" height="47" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Даст очень много урона
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/E9gkPJZh5">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Большой кластерный самоцвет</p>
+                        <img src="./images/equip/NewGemBase3.png" height="47" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Даст много урона, сюда ставим Аманамну + 1 самоцвет бездны
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/jjqn3wZuX">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Самоцвет бездны</p>
+                        <img src="./images/equip/GhastlyEye.png" height="47" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Такие берем в пояс х2, и во все оставшие дырки в дереве.
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/6Xb4zo0FG">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                </ul>
+                <div class="equip__separator">
+                    <h3>Прогрессия №2</h3>
+                </div>
+                <ul class="equip__list">
+                    <li class="equip__item">
+                        <p class="equip__title">Крепостное обязательство</p>
+                        <img src="./images/equip/BlueJewel4.png" height="47" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Даст много урона
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/yY0e8GeFR">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Кластерный №1</p>
+                        <img src="./images/equip/NewGemBase3.png" height="47" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Выбираем 12 пассивок, 3% скорости атаки и 25-35% усиления эффекта, оставшиеся усиления
+                            выбираем хп/сопротивление стихий - закрываем кап
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/Gk4dMeYCb">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Кластерный №2</p>
+                        <img src="./images/equip/NewGemBase3.png" height="47" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Выбираем 12 пассивок, 3% скорости атаки и 25-35% усиления эффекта, оставшиеся усиления
+                            выбираем хп/сопротивление стихий - закрываем кап
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/Gk4dMeYCb">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Оруженосец</p>
+                        <img src="./images/equip/CaspirosResonance.png" height="141" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Просто басбуст урона до анигиляции.
+                            <span class="gemslot">
+                                <span class="gemslot__socket ">
+                                    <span class="gemslot__text">Пробужденный Раскатистый Удар</span>
+                                </span>
+                                <span class="gemslot__socket ">
+                                    <span class="gemslot__text">Пробужденный Град ударов</span>
+                                </span>
+                                <span class="gemslot__socket ">
+                                    <span class="gemslot__text">Пробужденный Безграничные состояния</span>
+                                </span>
+                            </span>
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/QLZBK2MSw">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+
+                </ul>
+
+                <div class="equip__separator">
+                    <h3>Финальная сборка</h3>
+                </div>
+                <ul class="equip__list">
+                    <li class="equip__item">
+                        <p class="equip__title">Клык Аракали</p>
+                        <img src="./images/equip/weapon.png" height="141" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Пробужденный: Физический Урон ближнего боя</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Губительное прикосновение</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Пробужденный: Урон приспешников</span>
+                                </span>
+                            </span>
+                        </span>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Оруженосец</p>
+                        <img src="./images/equip/CaspirosResonance.png" height="141" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Просто басбуст урона до анигиляции.
+                            <span class="gemslot">
+                                <span class="gemslot__socket ">
+                                    <span class="gemslot__text">Пробужденный Раскатистый Удар</span>
+                                </span>
+                                <span class="gemslot__socket ">
+                                    <span class="gemslot__text">Пробужденный Град ударов</span>
+                                </span>
+                                <span class="gemslot__socket ">
+                                    <span class="gemslot__text">Пробужденный Безграничные состояния</span>
+                                </span>
+                            </span>
+                        </span>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Древний череп</p>
+                        <img src="./images/equip/ChuhutlusSkull.png" height="94" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Купить первым слотом
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Сбор</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Огненный рывок</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Расплавленный панцирь</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Осквернение</span>
+                                </span>
+                            </span>
+                        </span>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Латунный свод</p>
+                        <img src="./images/equip/DomeOfBrass.png" height="141" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Наставник 3+</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Злорадство</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Щит бури</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Знаме непокорности</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Решимость</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Живучесть</span>
+                                </span>
+                            </span>
+                        </span>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Бегство</p>
+                        <img src="./images/equip/Supporter1bootA.png" height="94" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Зачарование : <br/>
+                            <span class="blight__oils">
+                                <img src="./images/VerdantOil.png" alt="">
+                                <img src="./images/SilverOil.png" alt="">
+                                <img src="./images/GoldenOil.png" alt="">
+                            </span>
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Вихрь</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Пробужденное : Сотворение чар при поддержании</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Подношение плоти</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Осквернение</span>
+                                </span>
+                            </span>
+                        </span>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Воцарившаяся Тьма</p>
+                        <img src="./images/equip/DarknessEnthroned.png" height="47" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+                            95% усиления
+                        </span>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Бальзамировщик</p>
+                        <img src="./images/equip/Allelopathy.png" height="94" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Шквал клинков</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Ускорение атак</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Спасение стихий</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Жизнеотвод</span>
+                                </span>
+                            </span>
+                        </span>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Бунт Ола</p>
+                        <img src="./images/equip/Ahn.png" height="47" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Бесплатная резевация ауры, накидываем зачарование
+                            <span class="blight__oils">
+                                <img src="./images/OpalescentOil.png" alt="">
+                                <img src="./images/GoldenOil.png" alt="">
+                                <img src="./images/GoldenOil.png" alt="">
+                            </span>
+                        </span>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
