--- a/index.html
+++ b/index.html
@@ -386,6 +386,14 @@
             </div>
         </div>
         <div class="section__body">
+            <div class="note">
+                <a href="https://poeplanner.com/AwAAAwAhAAMAAA0Ag3yw3-q8wZIIHi5WQ2q-jorsLRHpOpws22sAAAAAAAAEAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA==" class="button">Дерево #1</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMAACQAqiSDfE2YQIh4K7Df6rzBklEQauMIHrJxnmbS-qym7utsGvhgLlZDajOQvo6K7C0R6TbpOsY6bxaYKpwsR0XRMvRixx_ba6mqAAAAAAEA-IaJnAQAAP______________________AAADAAAAAwD_____________PAAAAAAUAB-LCAAAAAAAAAMDAAAAAAAAAAAA" class="button">Дерево #2</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMAAEQA24Nghaokg3xNmECIeCuw3x_wrGrqvMGS8mgPES1MURBIrWrjCB6ycbAUswQHBJ5muU3S-rzMs0yspmyvYQvEqryJ7uvFcmwa-9OaJPhgLlZDah0akVozkL6OWDqK7GbALRHpNuk6xlXGOp9KbxaYKpwsoZtHRdf3mKzRMn2o9GLHHwCi22upqgAAAAABAPiGiZwEAAD______________________wAAAwAAAAMA_____________zwAAAAAFAAfiwgAAAAAAAADAwAAAAAAAAAAAA==" class="button">Дерево #3</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMAAGsA24OiPGCFqiSDfMyDTZg4Gqr7QIh4K7DfH_DWL6xq6rzBkvJoVZA3G1ArDxEtTFEQVP72xK7Gz01IrWrjCB6i9rJxsBSzBAcEnmZGjzkGuU047A890vq8zLNMZYispmyvzhxhC8SqvdjzWbyJL_Xu68VybBr703IamiQxWDtq-GA1qC5WQ2q7ah0akVpSUzOQLTy-jlg6iuxmwC0R6TbpOsZVxjqfSm8WLyenr5gqnCyhm0dFnUVgUeCa1_c-t4VlCv7NDZis0TJ9qPRixx8AottrIb-pqgAAAAADAPiGiZwqqxq6v2OUdwQAAP______________________AAADAAAAAwD_____________PAAAAAAUAB-LCAAAAAAAAAMDAAAAAAAAAAAA" class="button">Дерево #4</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMAAGAA24OiPKokg3wEtcyDOBqq-3grH9Cw3winH_DWL6xq6rzBkvJoVZA3G1ArVP72xK7Gz01q4wgeovaycYrGswQHBJ5mRo85BjjsDz3S-rNMZYispmyvzhxhC73Y81kv9RbN6-_u62wa-9NyGjFYO2r7UfhgNaguVkNqu2oUHZFaUlMtPL6OWDqK7GbALRHpNv5G6TrGVcY6bxYvJ6evnCxHRZ1FYFHgmj63hWUK_s0N0TIYH32o9GLHHwCi22shv6mqAAAAAAQA-IaJnCqrGrq_Y5R3JjZr_QQAAP______________________AAADAAAAAwD_____________PAAAAAAUAB-LCAAAAAAAAAMDAAAAAAAAAAAA" class="button">После покупки класстера</a>
+                <a href="https://poeplanner.com/AwAAAwAhAAMAAGUA24OiPKokg3wEtTgaqvu85FhoeCsf0LDfCKfnHB_w1i-sauq8qXLBkvJoVZA3G1ArVP72xK7Gz00aj2rjCB57haSAovaycV-DisYHBJ5mRo85BjjsDz3S-rNMZYispmyvzhxhC_NZL_UWzevv7utsGvvTchqKxftR-GA1qC5WQ2q7ahQdkVpSUy08vo6qrIrsVGYtEek2_kbpOsZVxjpvFtZVp6-cLJ1FYFHgmtwchWUvF9iJzQ0YH32o9GKW18cfAKLbayG_qarnZAAAAAAFACqrGromNmv99rGUd124qe5B1lvfBAAA______________________8AAAMAAAADAP____________88AAAAABQAH4sIAAAAAAAAAwMAAAAAAAAAAAA=" class="button">После покупки 2 класстеров</a>
+            </div>
             <div class="equip">
                 <div class="equip__separator">
                     <h3 >Начальная сборка</h3>
@@ -1062,7 +1070,7 @@
         </div>
         <div class="note">
             <a href="https://poeplanner.com/atlas-tree/BAASAC8AXK2W54kRTPWupUrQAlj-xVqBif7UuVJollD4c8n9UvaN6hqsJ3Xn2SSl0MZ4wjCJcOPScOeu0w59tU4bNTATfQsSwa_-JVcUFz2P5QB_c0QzxtVpqUO1Y2Yf1TnQKBQAH4sIAAAAAAAAAwMAAAAAAAAAAAA=">Дерево атласа №1</a> <br/>
-            <a href="https://poeplanner.com/atlas-tree/BAASAEcAXK2W54kRTPXTe7flrqVK0AJYwe7-xVqBif7UuWWQUmiWUPhzzgDJ_Uy6UvaN6mj6GqyIcid159kkpU3X1ytnYNDGoWh4wjCJAXpw40U6ZjDScAD5567TDhkKfbVOG6LQxSE1MBdQE30LEljnwa_-JVcUFz2P5QB_c0QzxtVp2VypQ7VjZh9vtZm51TnQKBQAH4sIAAAAAAAAAwMAAAAAAAAAAAA=">Дерево атласа №2</a>
+            <a href="https://poeplanner.com/atlas-tree/BAASAEcAXK2W54kRTPXTe7flrqVK0AJYwe7-xVqBif7UuWWQUmiWUPhzzgDJ_Uy6UvaN6mj6GqyIcid159kkpU3X1ytnYNDGoWh4wjCJAXpw40U6ZjDScAD5567TDhkKfbVOG6LQxSE1MBdQE30LEljnwa_-JVcUFz2P5QB_c0QzxtVp2VypQ7VjZh9vtZm51TnQKBQAH4sIAAAAAAAAAwMAAAAAAAAAAAA=">Дерево атласа №2</a> <br/>
             <a href="https://poeplanner.com/atlas-tree/BAASAGkAh9RcrZbniRFLMuu7TPWy-tN7t-WupYsuhrSxn0rQAlgIesHu_sVagcAqif6n4up4PFkhYNS5ZZCTLVJollD4c7VmzgBencn9TLpS9o3qaPoarIahiHLk9x8AJ3Xn2aoKJKVN19crZ2DUj9DGgqehaHjCMIkBenDjRTpmMDfj0nAA-eeu0w4ZCn21Thui0MsXxSE1MBdQNqSu7xN9CxL2dVjnGZTBrzp25ez-JVcUFz2P5QMwAH9zRDPG1WnZXKlDtWNmH7lib7WZudU5zvvpZ9AoFAAfiwgAAAAAAAADAwAAAAAAAAAAAA==">Дерево атласа №3</a>
         </div>
     </section>
