--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav class="header__menu">
             <ul class="header__menu-list">
                 <li class="header__menu-item">
-                    <a href="" class="header__menu-link">Фарм</a>
+                    <a href="./index.html" class="header__menu-link">Гайд</a>
                 </li>
                 <li class="header__menu-item">
-                    <a href="" class="header__menu-link">Шмот</a>
+                    <a href="./farm.html" class="header__menu-link">Фарм</a>
                 </li>
                 <li class="header__menu-item">
                     <a href="" class="header__menu-link">Прогресс</a>
@@ -988,6 +988,8 @@
                             <br/>
                             Берем в награду - <span class="gem-name--blue">Ускоренное сотворение чар</span>
                             и меняем на <span class="gem-name--blue">Призыв Фантома</span>
+                            <br/>
+                            <span class="npc-name">Помогаем Алире</span>
                         </p>
                     </li>
                     <li class="roadmap__item">
