--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Farm Calculator</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="./favicon.ico">
 </head>
 <body>
 <header class="header">
