--- a/index.html
+++ b/index.html
@@ -916,11 +916,36 @@
             </h3>
             <div class="section__description">
                 <p>
-                    куча текста
+                    полезные заметки
                 </p>
             </div>
         </div>
         <div class="section__body">
+            <div class="note">
+                <p>
+                    <img src="./images/3link.png" alt="">
+                    так отображаются 3+ линки
+                </p>
+                <p>
+                    <img src="./images/goodlink.png" alt="">
+                    Так отображаются мегаполезные линки <br/>
+                </p>
+                <p>
+                    - Чтобы получить расходную валюту на самом старте можно продавать в нпса
+                      магические и редкие вещи, для сферы превращения, они должны быть неопознаны. </br>
+                    Для сферы перемен - опознаны.
+                </p>
+                <p>
+                    Из железного кольца и камня умений(синий - холод и т.д) можно получить кольцо на сопротивления
+                </p>
+                <p>
+                    Для получения статов силы - покупаем пояс на силу <br/>
+                    Для получения статов ловкости - покупаем амулет на ловкость
+                </p>
+                <p>
+                    Для получение свитков опознования - портала, можно продавать деталь доспеха и точильный камень в нпса
+                </p>
+            </div>
             <div class="roadmap">
                 <ul class="roadmap__list">
                     <li class="roadmap__item">
